--- a/index.html
+++ b/index.html
@@ -188,17 +188,89 @@
     </section>
     <section class="four-section">
       <div class="container">
-
         <div class="hero-four">
           <div class="hero-content-four">
             <h4>Buyurtma berish</h4>
             <p>Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis lacinia ex, eget
               sollicitudin massa pellentesque in. Vivamus mattis eros at sem pulvinar</p>
+            <div class="form-box">
+              <form action="https://echo.htmlacademy.ru" method="post">
+                <input class="user-name" type="text" name="user-name" placeholder="Ismingiz" size="34px"
+                  autocomplete="off" minlength="3" required>
+                <input class="user-number" type="tel" name="user-tell" placeholder="Telefon raqamingiz"
+                  autocomplete="off" size="34px" required>
+                <input class="user-wishes" type="text" size="34px" placeholder="Xizmat turi" autocomplete="off"
+                  required>
+              </form>
+              <div class="link">
+                <a class="form-box-link" href="#link">Buyurtma berish</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
   </main>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="footer-section">
+        <h5>Copyright 2020</h5>
+        <div class="text-footer">
+          <p class="footer-section-text">Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam facilisis
+            lacinia ex, eget sollicitudin
+            massa pellentesque in. Vivamus mattis eros at sem pulvinar tincidunt.</p>
+        </div>
+        <div class="cite-pages">
+          <h5>Sayt sahifalari</h5>
+          <ul class="cite-pages-list">
+            <li class="cite-page-item">
+              <a href="#link">Bosh sahifa</a>
+            </li>
+            <li class="cite-page-item">
+              <a href="#link">Xizmatlar</a>
+            </li>
+            <li class="cite-page-item">
+              <a href="#link">Portfolio</a>
+            </li>
+            <li class="cite-page-item">
+              <a href="#link">Portfolio</a>
+            </li>
+            <li class="cite-page-item">
+              <a href="#link">Blog</a>
+            </li>
+            <li class="cite-page-item">
+              <a href="#link">Kontaktlar</a>
+            </li>
+          </ul>
+        </div>
+        <div class="internet-section">
+          <h5>Biz internetda</h5>
+          <ul>
+            <li>
+              <a href="https://telegram.org">
+                <img src="./img/telegram.svg" width="22px" height="24px" alt="telegram">
+              </a>
+              <p><a href="https://telegram.org"> Telegram </a></p>
+            </li>
+            <li>
+              <a href="https://www.facebook.com">
+                <img src="./img/facebook.svg" width="22px" height="24px" alt="facebook">
+              </a>
+              <p><a href="https://www.facebook.com"> Facebook </a></p>
+            </li>
+            <li>
+              <a href="https://www.instagram.com">
+                <img src="./img/instagram.svg" width="22px" height="24px" alt="instagram">
+              </a>
+              <p>
+                <a href="https://telegram.org">
+                  Instagram</a></p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
