--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/noramlize.css">
   <link rel="stylesheet" href="./style/main.css">
-  <title>pixer</title>
+  <title>Pixer</title>
 </head>
 
 <body>
